--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -45,7 +45,12 @@ dependencies {
 
     // Library Room for SQLite communication
     implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt "android.arch.persistence.room:compiler:1.1.1"
+
+    //Library for checking database tables
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp:1.5.0'
 
     // GLIDE
     implementation 'com.github.bumptech.glide:glide:4.7.1'
