--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'com.android.support:support-v13:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.2'
+
     // Library for custom calendarView
     implementation 'com.roomorama:caldroid:3.0.1'
 
