--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt "android.arch.persistence.room:compiler:1.1.1"
 
+    // Library for charts
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+
     //Library for checking database tables
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp:1.5.0'
