--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Controllers.Activities.ChronoActivity">
-
-        </activity>
-        <activity android:name=".Controllers.Activities.MealActivity">
-
-        </activity>
-        <activity android:name=".Controllers.Activities.MainActivity">
+        <activity android:name=".Controllers.Activities.StatActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".Controllers.Activities.ChronoActivity">
+        </activity>
+        <activity android:name=".Controllers.Activities.MainActivity">
+
         </activity>
     </application>
 
