--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.g.laurent.alitic"
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -32,46 +32,40 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-v13:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-
     // Gson
     implementation 'com.google.code.gson:gson:2.8.2'
-
     // Library for custom calendarView
     implementation 'com.roomorama:caldroid:3.0.1'
-
     // Library for creating timeline
     implementation 'com.github.vipulasri:timelineview:1.1.0'
-
     // Library Room for SQLite communication
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt "android.arch.persistence.room:compiler:1.1.1"
-
     // Library for charts
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     implementation 'org.apache.commons:commons-math3:3.6.1'
-
     //Library for checking database tables
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp:1.5.0'
-
     // GLIDE
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-
     // Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
-
     // Seekbar with two thumbs
     implementation 'com.ianpinto.androidrangeseekbar:androidrangeseekbar:1.0.0'
+
+    implementation group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
+    implementation 'pub.devrel:easypermissions:2.0.1'
 
     // Library for tests
     testImplementation 'junit:junit:4.12'
