--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Controllers.Activities.BaseActivity">
+        </activity>
         <activity android:name=".Controllers.Activities.PickActivity">
         </activity>
         <activity android:name=".Controllers.Activities.StatActivity">
