--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-
+        <activity android:name=".Controllers.Activities.PickMealActivity">
+        </activity>
+        <activity android:name=".Controllers.Activities.PickEventActivity">
+        </activity>
         <activity android:name=".Controllers.Activities.PickActivity">
         </activity>
         <activity android:name=".Controllers.Activities.StatActivity">
