--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:28.0.0"
 
     // Gson
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
     // Library for custom calendarView
     implementation 'com.roomorama:caldroid:3.0.1'
 
@@ -74,6 +74,9 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     // Seekbar with two thumbs
     implementation 'com.ianpinto.androidrangeseekbar:androidrangeseekbar:1.0.0'
+
+    // Table view for settings
+    implementation 'com.evrencoskun.library:tableview:0.8.8'
 
     implementation group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
     implementation 'pub.devrel:easypermissions:2.0.1'
