--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,29 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Controllers.Activities.PickMealActivity">
-        </activity>
-        <activity android:name=".Controllers.Activities.PickEventActivity">
-        </activity>
-        <activity android:name=".Controllers.Activities.StatActivity">
-        </activity>
-        <activity android:name=".Controllers.Activities.ChronoActivity">
-        </activity>
-        <activity android:name=".Controllers.Activities.MainActivity">
+
+        <activity android:name=".Controllers.Activities.PickMealActivity"
+                android:configChanges="keyboard|keyboardHidden"
+                android:screenOrientation="portrait"/>
+        <activity android:name=".Controllers.Activities.PickEventActivity"
+                android:configChanges="keyboard|keyboardHidden"
+                android:screenOrientation="portrait"/>
+        <activity android:name=".Controllers.Activities.StatActivity"
+                android:configChanges="keyboard|keyboardHidden"
+                android:screenOrientation="portrait"/>
+        <activity android:name=".Controllers.Activities.ChronoActivity"
+                android:configChanges="keyboard|keyboardHidden"
+                android:screenOrientation="portrait"/>
+        <activity android:name=".Controllers.Activities.MainActivity"
+                android:configChanges="keyboard|keyboardHidden"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
